dalsze poprawki
